name:                rescoyl-checks
version:             0.0.3
Cabal-Version:       >= 1.8
synopsis:            Docker registry conformance client
description:         This is a Docker registry client to test a registry.
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  build-depends:       aeson == 0.6.*,
                       aeson-streams,
                       base == 4.*,
                       blaze-builder == 0.3.*,
                       bytestring == 0.9.*,
                       HsOpenSSL == 0.10.*,
                       http-streams == 0.8.*,
                       HUnit == 1.2.*,
                       io-streams == 1.1.*,
                       SHA == 1.6.*
  exposed-modules:     Network.Http.Checks,
                       Network.Docker.Registry,
                       Network.Docker.Registry.Checks,
                       Network.Docker.Registry.Internal,
                       Network.Docker.Registry.Types,
                       Network.Docker.Remote
  ghc-options:         -Wall

executable rescoyl-checks
  hs-source-dirs:      bin
  main-is:             rescoyl-checks.hs
  build-depends:       base == 4.*,
                       bytestring == 0.9.*,
                       cmdargs == 0.9.*,
                       rescoyl-checks,
                       HUnit == 1.2.*
  ghc-options:         -Wall
                       -threaded
